--- a/config.toml
+++ b/config.toml
@@ -219,9 +219,10 @@ enable = false
   [module.hugoVersion]
     extended = true
     min = "0.75.0"
-  [[module.imports]]
-    path = "github.com/google/docsy"
-    disable = false
-  [[module.imports]]
-    path = "github.com/google/docsy/dependencies"
-    disable = false    
+
+[[module.imports]]
+  path = "/src/themes/docsy"
+  disable = false
+[[module.imports]]
+  path = "/src/themes/docsy/dependencies"
+  disable = false
