--- a/config.toml
+++ b/config.toml
@@ -2,7 +2,10 @@ baseURL = "/"
 title = "Goldydocs"
 
 # Language settings
-contentDir = "content/en"
+[[module.mounts]]
+source = "content/en"
+target = "content"
+
 defaultContentLanguage = "en"
 defaultContentLanguageInSubdir = false
 # Useful when translating.
